# hfs

./: .gitignore  CLAUDE.md  Cargo.toml  Jenkinsfile  LICENSE.md  README.md  build.rs  collection_navigation_implementation.md  datetime_implementation.md  debug_boolean_test.rs  debug_extension_macro_fix.rs  debug_foreach_combinations.rs  debug_inequality_test.rs  failing_tests.txt  fhirpath_implementation_plan.md  quantity_implementation.md  test_base64_binary.rs  test_base64_bundle.json  test_base64_view.json  test_bundle.json  test_code_bundle.json  test_code_view.json  test_debug_var.json  test_different_var.json  test_extension_fix_simple.rs  test_multiselect.rs  test_reference_keys_debug.rs  test_simple_device.json  test_simple_gender.json  test_simple_patient.json  test_view.json  todo.txt  type_system_implementation.md
.github/workflows/: ci.yml
crates/fhir/: Cargo.toml  README.md  build.rs
crates/fhir-gen/: Cargo.toml  README.md  build.rs
crates/fhir-gen/resources/R6/: conceptmaps.json  dataelements.json  profiles-types.json  search-parameters.json  version.info
crates/fhir-gen/src/: lib.rs  main.rs
crates/fhir-macro/: Cargo.toml  README.md
crates/fhir-macro/src/: lib.rs
crates/fhir/src/: lib.rs  parameters.rs  r4.rs  r4b.rs  r5.rs  r6.rs  r6.rs.template
crates/fhir/src/r4/: timing.rs
crates/fhir/tests/: integer_string_integration.rs  simple_null_test.rs  test_examples.rs  test_serde.rs
crates/fhir_gen/: Cargo.toml  README.md  build.rs
crates/fhir_gen/resources/R4/: slm.json
crates/fhir_gen/resources/R6/: view-definition-bundle-entry.json  view-definition-to-be-inserted.json
crates/fhir_gen/src/: fhir_schema.rs  initial_fhir_model.rs  lib.rs  main.rs  structure_definition.rs
crates/fhir_macro/: Cargo.toml  README.md
crates/fhir_macro/src/: lib.rs
crates/fhirpath/: Cargo.toml  README.md
crates/fhirpath-support/: Cargo.toml  README.md
crates/fhirpath-support/src/: lib.rs  type_info.rs
crates/fhirpath/benches/: cli_benches.rs  evaluator_benches.rs  parser_benches.rs  server_benches.rs
crates/fhirpath/docs/: README.md
crates/fhirpath/resources/r4/: tests-fhir-r4.xml
crates/fhirpath/src/: aggregate_function.rs  apply_type_operation.rs  apply_type_operation_fn.rs  boolean_functions.rs  boolean_type_tests.rs  boundary_functions.rs  cli.rs  collection_functions.rs  collection_navigation.rs  contains_function.rs  conversion_functions.rs  date_arithmetic.rs  date_components.rs  date_debug.rs  date_operation.rs  datetime_impl.rs  debug.rs  distinct_functions.rs  error.rs  evaluator.rs  evaluator.rs.bak  extension_function.rs  extension_helpers.rs  fhir_type_hierarchy.rs  fix_type_operators.rs  handlers.rs  is_boolean_patch.rs  lib.rs  long_conversion.rs  models.rs  not_function.rs  parse_debug.rs  parser.rs  polymorphic_access.rs  polymorphic_r4_test_handler.rs  reference_key_functions.rs  repeat_function.rs  resource_type.rs  server.rs  set_operations.rs  (+9 more)
crates/fhirpath/tests/: all_function_tests.rs  boundary_debug_tests.rs  boundary_function_integration_tests.rs  context_trace_test.rs  date_operation_tests.rs  datetime_boundary_tests.rs  debug_datetime_boundary.rs  debug_string_boundary_tests.rs  enhanced_variable_tests.rs  evaluator_tests.rs  extension_tests.rs  fhir_boundary_tests.rs  is_as_method_tests.rs  join_function_test.rs  oftype_datetime_tests.rs  parse_debug_test.rs  parser_tests.rs  polymorphic_r4_tests.rs  polymorphic_tests.rs  r4_tests.rs  reference_key_debug.rs  test_evaluator.rs  trace_api_test.rs  trace_tests.rs  tree_navigation_tests.rs  truncate_tests.rs  type_operation_tests.rs  type_preservation_integration_test.rs  type_reflection_tests.rs  uri_type_test.rs
crates/fhirpath/tests/data/r4/: tests-fhir-r4.xml
crates/fhirpath_support/: Cargo.toml  README.md
crates/fhirpath_support/src/: lib.rs
crates/hfs/: Cargo.toml  README.md
crates/hfs/src/: main.rs
crates/sof/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  run.md  test_constant_fix.rs  test_report.json
crates/sof/src/: cli.rs  error.rs  handlers.rs  lib.rs  models.rs  server.rs  traits.rs
crates/sof/tests/: debug_boolean_test.rs  debug_column_ordering.rs  debug_evaluation_result_conversion.rs  debug_extension_function.rs  debug_extension_macro_fix.rs  debug_extension_simple.rs  debug_fhir_resource_structure.rs  debug_foreach_combinations.rs  debug_inequality.rs  debug_raw_resource.rs  debug_reference_key_types.rs  extension_debug_test.rs  foreach_test.rs  multiselect_test.rs  run_foreach_tests.rs  server_tests.rs  sql_on_fhir_tests.rs  test_base64_binary_constant.rs  test_boolean_validation.rs  test_count_parameter_body.rs  test_csv_quote_handling.rs  test_extension_fix_verification.rs  test_extension_value_access.rs  test_format_parameter_body.rs  test_get_parameter_validation.rs  test_header_parameter_body.rs  test_parameter_validation.rs  test_patient_reference_formats.rs  test_query_parameter_combinations.rs  test_run_operation_parameters.rs  test_runner_integration.rs  test_shortened_format_names.rs  test_where_clause_validation.rs
crates/sof/tests/common/: mod.rs
