[package]
name = "helios-fhir-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "derive", "parsing"] } # Updated syn version and features
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] } # Use specific version, ensure workspace = true if needed elsewhere
serde_json = "1.0" # Use specific version, ensure workspace = true if needed elsewhere
heck = "0.5" # For case conversion
helios-fhirpath-support = { path = "../fhirpath-support" }
