[package]
name = "fhir"
version = "0.1.0"
edition = "2024"

[features]
default = ["R4"]
R4 = []
R4B = []
R5 = []
R6 = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
clap = { version = "4.4", features = ["derive"] }
fhir_macro = { path = "../fhir_macro" }
fhirpath_support = { path = "../fhirpath_support", version = "0.1.0" } # Add version if needed, ensure path is correct
time = "0.3.41"
# Re-add serde-with-arbitrary-precision, keep macros
rust_decimal = { version = "1.37.1", features = ["serde-with-arbitrary-precision", "macros"] }

[dev-dependencies]
rust_decimal_macros = "1.37.1"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"


