[package]
name = "fhir_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
futures-util = "0.3"
zip = "0.6"
