[package]
name = "fhir_gen"
version = "0.1.0"
edition = "2024"

[features]
default = ["R4"]
R4 = []
R4B = []
R5 = []
R6 = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
fhir = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde_json = "1.0"
