[package]
name = "fhir_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
 
[dependencies]
syn = { version = "1.0", features = ["full"] } # Enable "full" feature for parsing field types
quote = "1.0"
proc-macro2 = "1.0"
serde = { workspace = true, features = ["derive"] } # Add serde
serde_json = { workspace = true } # Add serde_json
