[package]
name = "sof"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sof-server"
path = "src/server.rs"

[[bin]]
name = "sof-cli"
path = "src/cli.rs"

[features]
default = ["R4"]
R4 = ["fhir/R4", "fhirpath/R4"]
R4B = ["fhir/R4B", "fhirpath/R4B"]
R5 = ["fhir/R5", "fhirpath/R5"]
R6 = ["fhir/R6", "fhirpath/R6"]

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
fhir = { path = "../fhir" }
fhirpath = { path = "../fhirpath" }
fhirpath_support = { path = "../fhirpath_support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "query"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.0"
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum-test = "16.0"
